Upgrade to 1.19.4